# mytime

./: .claude  .cursorrules  .gitignore  CLAUDE.md  plan.md
.github/workflows/: ci.yml
mytime-macos/: .gitignore  README.md
mytime-macos/MyTime/MyTime/: ContentView.swift  FloatingTimerView.swift  Info.plist  MyTimeApp.swift  Storage.swift  TimeEntry.swift  TimeTrackerViewModel.swift  WindowAccessor.swift  WindowTracker.swift
mytime-macos/MyTime/MyTime.xcodeproj/: project.pbxproj
mytime-macos/MyTime/MyTime.xcodeproj/project.xcworkspace/xcuserdata/fangjichao.xcuserdatad/: UserInterfaceState.xcuserstate
mytime-win-tauri/: README.md  implementation-detail.md  package.json  pnpm-lock.yaml  team-plan-and-discuss.md
mytime-win-tauri/src/: App.css  App.tsx  api.ts  types.ts
mytime-win-tauri/src-tauri/: Cargo.toml  tauri.conf.json
mytime-win-tauri/src-tauri/src/: ai.rs  categorizer.rs  lib.rs  main.rs  models.rs  tracker.rs  utils.rs
mytime-win-tauri/src-tauri/src/commands/: breakdown.rs  digest.rs  history.rs  insights.rs  mod.rs  rules.rs  settings.rs  suggestions.rs  tracking.rs
mytime-win-tauri/src-tauri/src/storage/: mod.rs  sqlite.rs
mytime-win-tauri/src/components/: AppList.tsx  CategoryChips.tsx  CleanupTab.tsx  ContextMenu.tsx  DashboardHeader.tsx  DashboardTabs.tsx  DateNav.tsx  DigestTab.tsx  HistoryTab.tsx  OverviewTab.tsx  RuleFormModal.tsx  RulesList.tsx  SelectedBreakdownList.tsx  SettingsPage.tsx  Sidebar.tsx  SuggestionsList.tsx  Timeline.tsx
mytime-win-tauri/src/hooks/: useAppContexts.ts  useDayBreakdown.ts  useDigest.ts  useHistory.ts  useProvenance.ts  useRules.ts  useSelectedBreakdown.ts  useSettings.ts  useSuggestions.ts  useTimeline.ts  useTrackingState.ts  useUnknownQueue.ts
mytime-windows/: .gitignore  Cargo.toml  build.rs  implementation-detail.md  team-plan-and-discuss.md
mytime-windows/src/: categorizer.rs  main.rs  models.rs  tracker.rs  tray.rs  utils.rs
mytime-windows/src/storage/: mod.rs  sqlite.rs
