[package]
name = "mytime-win"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI framework for Windows
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"

# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_Registry",
] }

# System tray
tray-icon = "0.19"
winit = "0.30"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CSV handling
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Async runtime for background tasks
tokio = { version = "1.41", features = ["full"] }