[package]
name = "mytime-win"
version = "0.2.0"
edition = "2021"

[dependencies]
# Native Windows GUI - mature, stable, proper Win32 integration
native-windows-gui = "1.0"
native-windows-derive = "1.0"

# Windows API bindings for tracking
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CSV handling
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
winres = "0.1"
